tests/baselines/reference/multipleDefaultExports04(target=es2015).errors.txt
multipleDefaultExports04.ts(1,25): error TS2323: Cannot redeclare exported variable 'default'.
multipleDefaultExports04.ts(1,25): error TS2393: Duplicate function implementation.
multipleDefaultExports04.ts(4,25): error TS2323: Cannot redeclare exported variable 'default'.
multipleDefaultExports04.ts(4,25): error TS2393: Duplicate function implementation.


==== multipleDefaultExports04.ts (4 errors) ====
    export default function f() {
                            ~
!!! error TS2323: Cannot redeclare exported variable 'default'.
                            ~
!!! error TS2393: Duplicate function implementation.
    }
    
    export default function f() {
                            ~
!!! error TS2323: Cannot redeclare exported variable 'default'.
                            ~
!!! error TS2393: Duplicate function implementation.
    }